# trainer-pro

./: .editorconfig  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  package-lock.json
.agent/workflows/: adding-integration-tests.md  agentic-e2e-testing.md  frontend-tests.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .env.example  .env.test  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  0bcd6f13061f_make_discipline_type_nullable.py  216545cbc03c_initial_schema_with_started_at.py  2aa6c7c2ce66_add_exercise_sets.py  3e6736416df3_initial_schema.py  44650287117e_make_phone_optional_in_trainer.py  b5739d11cb56_add_client_profile_payment_and_session_.py  c296a55e6aa5_add_session_groups_for_multi_client_.py  ce5efdf7acfa_add_logo_url_to_trainers.py  dffbdc1e749f_add_discipline_type_to_trainer.py  e7bfc4ca7318_add_google_auth_fields_to_trainer.py  f949ccc003b0_initial_schema_with_exercises.py
backend/app/: __init__.py  auth_utils.py  config.py  database.py  main.py
backend/app/models/: __init__.py  app.py  client.py  exercise_set.py  exercise_template.py  location.py  payment.py  session.py  session_exercise.py  session_group.py  trainer.py
backend/app/routers/: __init__.py  apps.py  auth.py  clients.py  dev_auth.py  exercise_sets.py  exercise_templates.py  locations.py  session_exercises.py  sessions.py  trainers.py  uploads.py
backend/app/schemas/: __init__.py  app.py  client.py  exercise_set.py  exercise_template.py  location.py  payment.py  session.py  session_exercise.py  trainer.py
backend/app/workers/: __init__.py  base.py
backend/scripts/: seed_data.py  test_active_session.py  test_bug.py  test_script.py
backend/tests/: conftest.py  test_active_sessions.py  test_clients.py  test_exercise_sets.py  test_exercise_templates.py  test_payments.py  test_session_exercises.py  test_sessions.py
frontend/: .env.example  next.config.js  next.config.ts  package-lock.json  package.json  run-vitest.mjs  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientExerciseHistoryCard.tsx  ImageUpload.tsx  (+13 more)
scripts/: pre-commit.sh
(+44 files in other folders)
