[tool.poetry]
name = "trainer-pro-backend"
version = "0.1.0"
description = "Multi-discipline trainer management platform backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
greenlet = "^3.3.1"
email-validator = "^2.3.0"
python-multipart = "^0.0.22"
httpx = "^0.28.1"
google-auth = "^2.48.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
